# DataStructure_Final

./: .gitignore  CMakeLists.txt  README.md  main.cpp  進度.md
Jimmy_Project/VisualStudio2015/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  cmake_install.cmake  project.vcxproj  solution.sln
RAYZ_Project/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  project.vcxproj  project.vcxproj.filters  solution.sln
XIAO_Project/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  project.vcxproj  project.vcxproj.filters  solution.sln
file/: 100.pcd  100_poission.ply  100_triangle.ply  20180301 - 複製.STL  20180301.STL  50.pcd  50_poission.ply  50_triangle.ply  55.pcd  55_poission.ply  55_triangle.ply  60.pcd  60_poission.ply  60_triangle.ply  65.pcd  65_poission.ply  65_triangle.ply  70.pcd  70_poission.ply  70_triangle.ply  75.pcd  75_poission.ply  75_triangle.ply  80.pcd  80_poission.ply  80_triangle.ply  85.pcd  85_poission.ply  85_triangle.ply  90.pcd  90_poission.ply  90_triangle.ply  95.pcd  95_poission.ply  95_triangle.ply  bunny_87940.pcd  bunny_87940.xlsx  bunny_high_helf.pcd  bunny_poission.ply  main.cpp  (+6 more)
include/: sphere.cpp  sphere.h  viewer.cpp  viewer.h
lib/: glew32sd.lib
project/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  project.vcxproj  project.vcxproj.filters  solution.sln
(+11 files in other folders)
